# RuntimeCompiledCPlusPlus

./: .gitignore  .gitmodules  readme.md  readme.txt
Aurora/: Aurora.props  Aurora_VS2010.sln  Aurora_x64.props  Aurora_x86.props  CMakeLists.txt
Aurora/Assets/GUI/: compiling-notification.rcss  compiling-notification.rml  console.rcss  console.rml  console.tga  fps-counter.rcss  fps-counter.rml  immunewin.tga  infectionwin.tga  input.rcss  input.rml  invader.tga  menu.rcss  menu.rml  splashscreen.rcss  splashscreen.rml  title.tga
Aurora/Assets/Models/: infected_cell.aml  red_blood_cell.aml  virus.aml  white_blood_cell.aml
Aurora/Assets/Sounds/: SoundFileAttributions.txt
Aurora/Audio/: Audio_VS2010.vcxproj  Audio_VS2010.vcxproj.filters  alBuffer.cpp  alBuffer.h  alManager.cpp  alManager.h  alSound.cpp  alSound.h
Aurora/Aurora.xcworkspace/: contents.xcworkspacedata
Aurora/Common/: .project  AUArray.inl  AUColor.inl  AUOrientation3D.inl  AUVec3f.inl  Common_2010.vcxproj  Definitions.inl  Math.inl
Aurora/Examples/ConsoleExample/: .cproject  .project  ConsoleExample.cpp  ConsoleExample.vcxproj  ConsoleExample.vcxproj.filters  ConsoleGame.cpp  ConsoleGame.h  IUpdateable.h  InterfaceIds.h  RuntimeObject01.cpp  StdioLogSystem.cpp  StdioLogSystem.h
Aurora/Examples/SimpleTest/: .cproject  .gitignore  .project  BB_Global.h  BB_Group_Infected.h  BB_Group_RBC.h  BB_Group_Virus.h  BB_Group_WBC.h  BB_Individual_Common.h  BB_Individual_Infected.h  BB_Individual_RBC.h  BB_Individual_Virus.h  BB_Individual_WBC.h  BB_Team_Immune.h  BB_Team_Infection.h  BehaviorCommon.h  BehaviorTreeManager.cpp  BehaviorTree_Infected.cpp  BehaviorTree_RBC.cpp  BehaviorTree_Virus.cpp  BehaviorTree_WBC.cpp  Behavior_Infected_Approach.cpp  Behavior_Infected_Base.h  Behavior_Infected_Combat.cpp  Behavior_Infected_HuntRBC.cpp  Behavior_Infected_HuntWBC.cpp  Behavior_Infected_Idle.cpp  Behavior_RBC_Approach.cpp  Behavior_RBC_Base.h  Behavior_RBC_Combat.cpp  Behavior_RBC_Evade.cpp  Behavior_RBC_Idle.cpp  Behavior_Virus_Approach.cpp  Behavior_Virus_Base.h  Behavior_Virus_Combat.cpp  Behavior_Virus_HuntRBC.cpp  Behavior_Virus_HuntWBC.cpp  Behavior_Virus_Idle.cpp  Behavior_WBC_Approach.cpp  Behavior_WBC_Base.h  (+50 more)
Aurora/Renderer/: .cproject  .project  AURenMesh.cpp  AURenMesh.h  AURenTexture.cpp  AURenTexture.h  AURenderContext.cpp  AURenderContext.h  HiResTimer.h  IAURenderable.h  IImage.cpp  IImage.h  ImageJPG.cpp  ImageJPG.h  ImagePNM.cpp  ImagePNM.h  RenderWindow.cpp  RenderWindow.h  Renderer_VS2010.vcxproj
Aurora/Renderer/Renderer.xcodeproj/: project.pbxproj
Aurora/RuntimeCompiler/: .cproject  .project  AUArray.h  BuildTool.cpp  BuildTool.h  CompileOptions.h  Compiler.h  Compiler_PlatformMacOSX.cpp  Compiler_PlatformMinGW.cpp  Compiler_PlatformPosix.cpp  Compiler_PlatformVS.cpp  Compiler_PlatformWindows.cpp  Compiler_PlatformWindows.h  FileChangeNotifier.cpp  FileChangeNotifier.h  FileMonitor.cpp  FileMonitor.h  FileMonitor_PlatformWindows.cpp  FileMonitor_PlatformWindows.h  FileSystemUtils.h  ICompilerLogger.h  IFileChangeNotifier.h  IFileMonitor.h  ObjectInterface.h  ObjectInterfacePerModule.h  ObjectInterfacePerModuleSource_PlatformWindows.cpp  RuntimeCompiler_VS2010.vcxproj  RuntimeCompiler_VS2010.vcxproj.filters  RuntimeInclude.h  ThreadSafeQueue.h
Aurora/RuntimeCompiler/RuntimeCompiler.xcodeproj/: project.pbxproj
Aurora/RuntimeCompiler/SimpleFileWatcher/: FileWatcher.cpp  FileWatcher.h  FileWatcherImpl.h  FileWatcherLinux.cpp  FileWatcherLinux.cpp~  FileWatcherLinux.h  FileWatcherOSX.cpp  FileWatcherOSX.h  FileWatcherWin32.cpp  FileWatcherWin32.h  FileWatcherWin32_AltImpl.h
Aurora/RuntimeObjectSystem/: .cproject  .project  Exceptions.h  Exceptions_PlatformMacOSX.cpp  Exceptions_PlatformMacOSX.inl  Exceptions_PlatformWindows.cpp  Exceptions_PlatformWindows.inl  IObject.h  IObjectFactorySystem.h  IRuntimeObjectSystem.h  ISimpleSerializer.h  ObjectInterface.h  ObjectInterfacePerModule.h  ObjectInterfacePerModuleSource.cpp  ObjectInterfacePerModuleSource_PlatformWindows.cpp  RuntimeInclude.h  RuntimeIncludeDir.h  RuntimeLinkLibrary.h  RuntimeObjectSystem.cpp  RuntimeObjectSystem.h  RuntimeObjectSystem.vcxproj  RuntimeObjectSystem.vcxproj.filters  RuntimeObjectSystem_PlatformMacOSX.cpp  RuntimeObjectSystem_PlatformPosix.cpp  RuntimeObjectSystem_PlatformWindows.cpp  RuntimeProtector.h  RuntimeSourceDependency.h  RuntimeTracking.h
Aurora/RuntimeObjectSystem/ObjectFactorySystem/: ObjectFactorySystem.cpp  ObjectFactorySystem.h
Aurora/RuntimeObjectSystem/RuntimeObjectSystem/: RuntimeObjectSystem.cpp  RuntimeObjectSystem.h
Aurora/RuntimeObjectSystem/RuntimeObjectSystem.xcodeproj/: project.pbxproj
Aurora/RuntimeObjectSystem/SimpleSerializer/: SimpleSerializer.cpp  SimpleSerializer.h
Aurora/Systems/: .cproject  .project  Definitions.inl  Exceptions.cpp  IAssetSystem.h  IEntity.h  IEntitySystem.h  IGUIDocument.h  IGUIElement.h  IGUISystem.h  IGame.h  ILogSystem.h  IObject.h  IObjectFactorySystem.h  ISimpleSerializer.h  ISystem.h  ITimeSystem.h  IUpdateable.h  SystemTable.h  Systems.cpp  Systems.h  Systems.vcxproj  Systems.vcxproj.filters  readme.txt
Aurora/Systems/AssetSystem/: AssetSystem.cpp  AssetSystem.h
Aurora/Systems/EntitySystem/: EntitySystem.cpp  EntitySystem.h
Aurora/Systems/GUISystem/: GUIDocument.cpp  GUIDocument.h  GUIElement.cpp  GUIElement.h  GUISystem.cpp  GUISystem.h  IGUIInstancer.h  ReferenceCountable.cpp  ReferenceCountable.h
Aurora/Systems/ObjectFactorySystem/: ObjectFactorySystem.cpp  ObjectFactorySystem.h
Aurora/Systems/RocketLibSystem/: Input.cpp  Input.h  InputGLFW.cpp  InputGLFW.h  InputMacOSX.cpp  InputWin32.cpp  InputWin32.h  InputX11.cpp  RocketLibSystem.cpp  RocketLibSystem.h  RocketLibSystemFileInterface.cpp  RocketLibSystemFileInterface.h  RocketLibSystemGLFW.cpp  RocketLibSystemMacOSX.cpp  RocketLibSystemOpenGL.h  RocketLibSystemRenderInterfaceOpenGL.cpp  RocketLibSystemRenderInterfaceOpenGL.h  RocketLibSystemSystemInterface.cpp  RocketLibSystemSystemInterface.h  RocketLibSystemWin32.cpp  RocketLibSystemX11.cpp
Aurora/cmake/: ProjectFiles.cmake
(+21 files in other folders)
